# snakecraft

./: .gitignore  CHANGELOG.txt  CONTRIBUTORS  README.md  pylama.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: .gitignore  snakecraft.ini
examples/modular_example/: __init__.py  cluster.py  config.py  db.py  providers.py  state.py  util.py
examples/modular_example/prod/: config.py
examples/modular_example/test/: config.py
examples/modular_example/tf_modules/test_module/: main.tf
examples/simple_example/: simple_example.py
snakecraft/: __init__.py  __main__.py  core.py  exceptions.py  utils.py
tests/: conftest.py  test_naming.py
