[tool.poetry]
name = "snakecraft"
version = "0.2.1"
description = "Describe your Terraform project using Python with inheritance"
authors = ["Alexander Schremmer <alex@alexanderweb.de>", "See CONTRIBUTORS in source distribution of snakecraft."]
readme = "README.md"
homepage = "https://github.com/xoraxax/snakecraft"
repository = "https://github.com/xoraxax/snakecraft"
keywords = ["terraform", "codegeneration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Other",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
include = ["LICENSE"]


[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.9.3"
pdbpp = "^0.10.3"
pylama = "^7.7.1"

[tool.poetry.scripts]
snakecraft = "snakecraft.__main__:main"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
